Main nav Donate button icon contrast fix on hover

--- a/source/sass/components/primary-nav.scss
+++ b/source/sass/components/primary-nav.scss
@@ -298,6 +298,14 @@
       }
     }
   }
+
+  a.tw-btn-secondary.tw-heart-glyph {
+    @include hover-focus-active {
+      &:before {
+        filter: brightness(0) invert(100%);
+      }
+    }
+  }
 }
 
 // Newsletter
